# abicheck

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  BUGFIX_SPEC.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_DUPLICATION_ANALYSIS.md  CONSOLIDATION_SPEC.md  CONTRIBUTING.md  FIX_SPEC.md  GOALS.md  LICENSE  MCP_SUPPORT_PLAN.md  NOTICE  NOTICE.md  PLAN.md  README.md  RELEASING.md  REVIEW_NOTES.md  SECURITY.md  SUPPORT.md  TEST_COVERAGE_ANALYSIS.md  TEST_GAP_PLAN.md  action.yml  buildsource-checks-plan.md  buildsource-redesign-plan.md  codecov.yml  mkdocs.yml  plan.md  pyproject.toml  renovate.json  ruff.toml
contrib/abicheck-clang-plugin/: AbicheckFactsPlugin.cpp  CMakeLists.txt  README.md
examples/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ground_truth.json  suppression_example.yaml
examples/case01_symbol_removal/: CMakeLists.txt  Makefile  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case02_param_type_change/: CMakeLists.txt  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case03_compat_addition/: CMakeLists.txt  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case04_no_change/: CMakeLists.txt  Makefile  README.md  app.c  v1.c  v1.h  v2.c
examples/case05_soname/: CMakeLists.txt  Makefile  README.md  app.c
examples/case06_visibility/: CMakeLists.txt  Makefile  README.md  app.c  bad.c  good.c
examples/case07_struct_layout/: CMakeLists.txt  README.md  app.c  app_v1_static  app_v2_static  v1.c  v1.h  v2.c  v2.h
examples/case08_enum_value_change/: CMakeLists.txt  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case09_cpp_vtable/: CMakeLists.txt  Makefile  README.md  app  app.cpp  app_O2  v1.cpp  v1.h  v2.cpp  v2.h
examples/case100_experimental_removed_without_replacement/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.h
examples/case101_inline_namespace_version_bumped/: CMakeLists.txt  README.md  v1.cpp  v1.h  v2.cpp  v2.h
examples/case102_frozen_runtime_signature_changed/: CMakeLists.txt  README.md  app.cpp  policy.yaml  v1.cpp  v2.cpp
examples/case103_toolchain_flag_drift/: CMakeLists.txt  README.md  app.c  v2.c  v2.h
examples/case104_glibcxx_dual_abi_flip/: CMakeLists.txt  README.md  app.cpp  v1.cpp
examples/case105_concept_tightening/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case106_ctor_became_explicit/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case107_task_scheduler_init_removed/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case108_task_class_removed/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case109_experimental_graduated/: CMakeLists.txt  README.md  app.cpp  v1.h
examples/case109_flow_graph_policy_renames/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case10_return_type/: CMakeLists.txt  README.md  app  app.c  v1.c  v1.h  v2.c  v2.h
examples/case110_concurrent_unordered_map_api_drift/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case110_experimental_removed_without_replacement/: CMakeLists.txt  README.md  v2.cpp
examples/case111_enumerable_thread_specific_lambda_ambiguity/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case112_inline_namespace_version_bumped/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v2.cpp  v2.h
examples/case112_lp64_ilp64/: CMakeLists.txt  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case112_task_arena_attach_tag/: CMakeLists.txt  README.md
examples/case113_abi_tag_changed/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case114_char8t_migration/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case115_api_depends_on_consumer_env/: CMakeLists.txt  README.md  v2.h
examples/case115_bit_int_width_changed/: CMakeLists.txt  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case116_atomic_qualifier_changed/: CMakeLists.txt  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case116_cxx_standard_floor_raised/: CMakeLists.txt  README.md  v1.h  v2.h
examples/case117_no_unique_address/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case118_internal_struct_field_added_scoped/: README.md  v1.h  v2.h
examples/case119_internal_struct_field_removed_scoped/: README.md  v1.h  v2.c  v2.h
examples/case11_global_var_type/: CMakeLists.txt  README.md  app  app.c  v1.c  v1.h  v2.c  v2.h
examples/case120_frozen_runtime_signature_changed/: CMakeLists.txt  README.md  policy.yaml  v1.h  v2.h
examples/case120_internal_struct_reordered_scoped/: README.md  app.c  v1.c  v1.h  v2.h
examples/case121_kernel_btf_struct_field_added/: README.md  gen_btf.py  v1.btf  v2.btf
examples/case121_toolchain_flag_drift/: CMakeLists.txt  README.md  v1.c
examples/case122_glibcxx_dual_abi_flip/: CMakeLists.txt  README.md
examples/case122_template_signature_uninstantiated/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case123_default_argument_removed/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case124_header_constant_value_changed/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case125_class_became_final/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case126_sycl_device_impl_ptr/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case127_data_object_size_changed/: CMakeLists.txt  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case128_symbol_binding_strengthened/: CMakeLists.txt  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case129_struct_return_convention/: CMakeLists.txt  README.md  app.cpp  v1.cpp  v1.h  v2.cpp  v2.h
examples/case12_function_removed/: CMakeLists.txt  Makefile  README.md  app.c  v1.c  v1.h  v2.c  v2.h
examples/case130_exceptions_mode_flip/: CMakeLists.txt  README.md  v1.compile_commands.json  v2.compile_commands.json
examples/case131_rtti_mode_flip/: CMakeLists.txt  README.md  v1.compile_commands.json  v2.compile_commands.json
(+1783 files in other folders)
