[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abicheck"
version = "0.1.0"
description = "ABI compatibility checker for C/C++ shared libraries"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Nikolay Petrov", email = "nikolay.a.petrov@intel.com"}]
requires-python = ">=3.10"
keywords = ["abi", "api", "compatibility", "checker", "shared-library", "elf", "dwarf", "castxml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7.1",
    "pyelftools>=0.29",   # ELF/DWARF parsing
    "packaging>=21.0",    # Version comparison for suppression version_range
]

[project.scripts]
abicheck = "abicheck.cli:main"

[project.urls]
Repository = "https://github.com/napetrov/abicheck"
Documentation = "https://napetrov.github.io/abicheck/"
"Bug Tracker" = "https://github.com/napetrov/abicheck/issues"
Changelog = "https://github.com/napetrov/abicheck/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.3",
    "mypy>=1.0",
    "types-PyYAML",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyelftools has no type stubs or py.typed marker — all its APIs are untyped.
# Disable strict checks for modules that directly call pyelftools APIs.
module = ["abicheck.elf_metadata", "abicheck.dwarf_metadata"]
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "unused-ignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires castxml, gcc/g++ installed",
    "libabigail: requires abidiff + gcc/g++ — libabigail parity tests",
    "abicc: requires abi-compliance-checker + gcc/g++ — ABICC parity tests",
]

[tool.setuptools.packages.find]
include = ["abicheck*"]

[tool.coverage.run]
branch = true
source = ["abicheck"]

[tool.coverage.report]
show_missing = true
skip_covered = false
