[build-system]
requires = ["setuptools>=68,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "abicheck"
version = "0.1.0"
description = "ABI compatibility checker for C/C++ shared libraries"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Nikolay Petrov", email = "sfasp.post@gmail.com"}]
requires-python = ">=3.10"
keywords = ["abi", "api", "compatibility", "checker", "shared-library", "elf", "pe", "macho", "dwarf", "castxml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7.1",
    "pyelftools>=0.29",   # ELF/DWARF parsing
    "packaging>=21.0",    # Version comparison for suppression version_range
    "pefile>=2023.2.7",   # Windows PE/COFF parsing
    "macholib>=1.16",     # macOS Mach-O parsing
]

[project.scripts]
abicheck = "abicheck.cli:main"
abicheck-mcp = "abicheck.mcp_server:main"

[project.urls]
Repository = "https://github.com/napetrov/abicheck"
Documentation = "https://napetrov.github.io/abicheck/"
"Bug Tracker" = "https://github.com/napetrov/abicheck/issues"
Changelog = "https://github.com/napetrov/abicheck/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.3",
    "mypy>=1.0",
    "types-PyYAML",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyelftools has no type stubs or py.typed marker — all its APIs are untyped.
# Disable strict checks for modules that directly call pyelftools APIs.
module = [
    "abicheck.elf_metadata",
    "abicheck.pe_metadata",
    "abicheck.macho_metadata",
    "abicheck.dwarf_metadata",
    "abicheck.dwarf_advanced",
    "abicheck.dwarf_unified",
    "abicheck.dumper",
]
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "unused-ignore"]

[[tool.mypy.overrides]]
# Click decorators (@click.command, @click.option, etc.) are untyped.
module = ["abicheck.cli", "abicheck.compat.cli"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# types-PyYAML stubs may not be found in all environments;
# the package is listed in [project.optional-dependencies.dev].
module = ["abicheck.policy_file", "abicheck.suppression"]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires castxml, gcc/g++ installed",
    "libabigail: requires abidiff + gcc/g++ — libabigail parity tests",
    "abicc: requires abi-compliance-checker + gcc/g++ — ABICC parity tests",
]

[tool.setuptools.packages.find]
include = ["abicheck*"]

[tool.coverage.run]
branch = true
source = ["abicheck"]

[tool.coverage.report]
show_missing = true
skip_covered = false
