[build-system]
requires = ["setuptools>=68,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "abicheck"
version = "0.3.0"
description = "ABI compatibility checker for C/C++ shared libraries"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Nikolay Petrov", email = "sfasp.post@gmail.com"}]
requires-python = ">=3.10"
keywords = ["abi", "api", "compatibility", "checker", "shared-library", "elf", "pe", "macho", "dwarf", "castxml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7.1",
    "pyelftools>=0.29",   # ELF/DWARF parsing
    "packaging>=21.0",    # Version comparison for suppression version_range
    "pefile>=2023.2.7",   # Windows PE/COFF parsing
    "macholib>=1.16",     # macOS Mach-O parsing
]

[project.scripts]
abicheck = "abicheck.cli:main"
abicheck-mcp = "abicheck.mcp_server:main"

[project.urls]
Repository = "https://github.com/napetrov/abicheck"
Documentation = "https://napetrov.github.io/abicheck/"
"Bug Tracker" = "https://github.com/napetrov/abicheck/issues"
Changelog = "https://github.com/napetrov/abicheck/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist>=3.0",
    "filelock>=3.0",
    "hypothesis>=6.0",
    "ruff>=0.3",
    "mypy>=1.0",
    "types-PyYAML",
    "jsonschema>=4.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# ``unused-ignore`` flips on/off depending on the mypy + pyelftools combo
# the developer or CI runner happens to have installed (different
# Python minor versions, different bundled stubs). Disabling it globally
# keeps the `# type: ignore[...]` comments scattered throughout the
# pyelftools call sites portable across environments without forcing a
# strict version pin on every contributor.
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
# pyelftools has no type stubs or py.typed marker — all its APIs are untyped.
# Disable strict checks for modules that directly call pyelftools APIs.
module = [
    "abicheck.appcompat",
    "abicheck.elf_metadata",
    "abicheck.pe_metadata",
    "abicheck.macho_metadata",
    "abicheck.dwarf_metadata",
    "abicheck.dwarf_advanced",
    "abicheck.dwarf_unified",
    "abicheck.dumper",
    "abicheck.package",
    "abicheck.pdb_parser",
    "abicheck.pdb_metadata",
    "abicheck.pdb_utils",
    "abicheck.sycl_metadata",
    "abicheck.binary_fingerprint",
    "abicheck.evidence.compiler_record",
]
disallow_untyped_calls = false
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
# Click decorators (@click.command, @click.option, etc.) are untyped.
# ``compat/cli.py`` additionally subclasses ``click.Group`` (typed as Any)
# and threads click-managed list[str] values through helper accessors, so
# we also relax ``no-any-return`` / ``misc`` there.
module = [
    "abicheck.cli",
    "abicheck.cli_appcompat",
    "abicheck.cli_compare_release",
    "abicheck.cli_debian_symbols",
    "abicheck.cli_baseline",
    "abicheck.cli_evidence",
    "abicheck.cli_plugin",
    "abicheck.cli_pr_comment",
    "abicheck.cli_probe",
    "abicheck.cli_stack",
    "abicheck.cli_suggest",
    "abicheck.cli_surface",
    "abicheck.compat.cli",
]
disallow_untyped_decorators = false
disable_error_code = ["no-any-return", "misc"]

[[tool.mypy.overrides]]
# ``cli_params.PolicyFileParam`` subclasses ``click.ParamType``. Depending on
# the installed click's type stubs, mypy treats the base either as ``Any``
# (-> ``misc``: "cannot subclass Any") or as a generic needing a type argument
# (-> ``type-arg``). Suppress both so the module stays portable across click /
# mypy versions without a runtime ``ParamType[...]`` subscription.
module = ["abicheck.cli_params"]
disallow_untyped_decorators = false
disable_error_code = ["no-any-return", "misc", "type-arg"]

[[tool.mypy.overrides]]
# FastMCP decorators (@mcp.tool, etc.) are untyped.
module = ["abicheck.mcp_server"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# types-PyYAML stubs may not be found in all environments;
# the package is listed in [project.optional-dependencies.dev].
module = [
    "abicheck.policy_file",
    "abicheck.suppression",
    "abicheck.environment_matrix",
    "abicheck.probe_harness",
    "abicheck.bundle",
]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires castxml, gcc/g++ installed",
    "libabigail: requires abidiff + gcc/g++ — libabigail parity tests",
    "abicc: requires abi-compliance-checker + gcc/g++ — ABICC parity tests",
    "slow: marks tests as slow (hypothesis / performance benchmarks)",
    "golden: golden-output snapshot tests",
]

[tool.setuptools.packages.find]
include = ["abicheck*"]

[tool.setuptools.package-data]
"abicheck.schemas" = ["*.json"]
"abicheck.policies" = ["*.yaml"]

[tool.coverage.run]
branch = true
source = ["abicheck"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mutmut]
# Mutmut v3 config — mutation testing for core detector logic.
# Usage:
#   mutmut run                       # full run
#   mutmut results                   # view surviving mutants
#   mutmut show <id>                 # show a specific mutant
#
# Focus on the core detection modules where surviving mutants indicate
# test gaps that could allow regressions:
paths_to_mutate = [
    "abicheck/diff_symbols.py",      # function/variable/parameter detectors
    "abicheck/diff_types.py",        # type/enum/union/typedef detectors
    "abicheck/diff_platform.py",     # ELF/DWARF/PE/Mach-O detectors
    "abicheck/diff_filtering.py",    # deduplication and redundancy logic
    "abicheck/checker_policy.py",    # verdict classification
    "abicheck/idioms.py",            # ADR-027 idiom & anti-pattern recognisers
    "abicheck/pattern_verdicts.py",  # ADR-027 A4 verdict modulation
    "abicheck/surface_graph.py",     # ADR-027 declaration-graph substrate
]
tests_dir = "tests/"
runner = "python -m pytest -x -q --tb=no -m 'not integration and not libabigail and not abicc and not slow'"
